# 025-regime-detection-hmm

./: README.md  README.ru.md  README.simple.ru.md
rust_hmm_trading/: Cargo.toml  README.md
rust_hmm_trading/examples/: detect_regimes.rs  fetch_data.rs  full_backtest.rs  train_hmm.rs
rust_hmm_trading/src/: lib.rs  main.rs
rust_hmm_trading/src/api/: bybit.rs  error.rs  mod.rs
rust_hmm_trading/src/models/: algorithms.rs  gaussian.rs  hmm.rs  mod.rs
rust_hmm_trading/src/regime/: detector.rs  interpreter.rs  mod.rs
rust_hmm_trading/src/strategies/: base.rs  bear.rs  bull.rs  mod.rs  sideways.rs  switcher.rs
rust_hmm_trading/src/trading/: backtest.rs  metrics.rs  mod.rs  portfolio.rs
