[package]
name = "hmm_trading"
version = "0.1.0"
edition = "2021"
description = "Hidden Markov Model regime detection for cryptocurrency trading using Bybit data"
authors = ["ML Trading Examples"]
license = "MIT"

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Linear algebra and numerical computing
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Statistical functions
statrs = "0.16"

# CSV handling
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HMAC for API authentication (if needed for private endpoints)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Colored terminal output
colored = "2.0"

# Table formatting
prettytable-rs = "0.10"

[[bin]]
name = "hmm_trading"
path = "src/main.rs"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "train_hmm"
path = "examples/train_hmm.rs"

[[example]]
name = "detect_regimes"
path = "examples/detect_regimes.rs"

[[example]]
name = "full_backtest"
path = "examples/full_backtest.rs"

[profile.release]
opt-level = 3
lto = true
